# yandex-wiki-search-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICE  README.md  README_ru.md  RELEASE_RUNBOOK.md  ROADMAP.md  glama.json  manifest.json  pyproject.toml  server.json
.claude/commands/: add-tool.md  docs.md  ghactions.md  release.md
.github/workflows/: release.yml
docs/: api-notes.md  api-notes_ru.md
mcp_wiki/: __main__.py  settings.py
mcp_wiki/mcp/: context.py  params.py  server.py  utils.py
mcp_wiki/mcp/tools/: common.py  page_read.py  page_write.py
mcp_wiki/wiki/custom/: anchors.py  client.py  errors.py
mcp_wiki/wiki/proto/: common.py  pages.py
mcp_wiki/wiki/proto/types/: pages.py
scripts/: probe_api.sh  probe_api2.sh  probe_api3.sh  smoke.sh
tests/: conftest.py
tests/fixtures/: README.md  errors.json  page_full.json  resources.json  search_empty.json  search_results.json
tests/mcp/: conftest.py
tests/mcp/server/: test_server_creation.py
tests/mcp/tools/: test_page_read_tools.py  test_page_write_tools.py
tests/wiki/custom/: test_anchors.py  test_client.py  test_errors.py
