[project]
name = "yandex-wiki-search-mcp"
version = "0.4.0"
description = "MCP server for Yandex Wiki with full-text search"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "David Bolshov", email = "dlbolshov@gmail.com" },
    { name = "Aleksandr Ponkratov", email = "aleks.ponkratov@gmail.com" },
]
maintainers = [
    { name = "David Bolshov", email = "dlbolshov@gmail.com" },
]
dependencies = [
    "aiocache[redis]>=0.12.3",
    "aiohttp>=3.11.18",
    "cryptography>=44.0",
    "mcp[cli]>=1.21",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.8.1",
    "yarl>=1.20.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_wiki*"]

[tool.setuptools.package-data]
mcp_wiki = ["py.typed"]

[project.scripts]
yandex-wiki-search-mcp = "mcp_wiki.__main__:main"

[project.urls]
Homepage = "https://github.com/dlbolshov/yandex-wiki-search-mcp"
Repository = "https://github.com/dlbolshov/yandex-wiki-search-mcp"
Issues = "https://github.com/dlbolshov/yandex-wiki-search-mcp/issues"

[dependency-groups]
dev = [
    "aioresponses>=0.7.7",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "ty>=0.0.8",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = []

[[tool.mypy.overrides]]
module = "*.*"
ignore_missing_imports = true
check_untyped_defs = true
enable_error_code = "ignore-without-code"

[tool.ruff]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
fixable = ["I", "RUF022", "RUF023", "F401"]
preview = true
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
    "T20",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
no-lines-before = []

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["cached_classproperty", "classproperty"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-n",
    "auto",
    "--strict-markers",
    "--tb=short",
]
